syntax = "proto3";
package com.inspirationparticle.auth.v1;

option java_package = "com.inspirationparticle.auth.v1";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
